fix rotate view overflow problem

--- a/bin/html/common.css
+++ b/bin/html/common.css
@@ -63,9 +63,8 @@ label.fillParent {display: inline-block; width: 100%; height: 100%; text-align: 
     min-height: 300px;
 }
 #viewerContainer {
-    width: 100%;
+    min-width: 300px;
     background-color: #A0A0A0;
-    text-align: center;
 
     -webkit-user-select: none;
     -moz-user-select: none;
